"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

BRANCH CHECKLIST: code review TODO/FIXME through all prsim code!

2008-11-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-16-a: (srcdir only tag)
	  Better printing of rules, further reducing test differences.


	* HACKT-00-01-04-main-00-82-32-prsim-10-16:
	  Cleaned up evaluate_return_type struct, removed unused refs
		to __scratch_expr_trace.
	  Added unique_process_subgraph::check_node(), from check_structure().
	  TODO: memstats, fanin/out-get print-info, 
		print rule attributes properly at rule, update tests.


	* HACKT-00-01-04-main-00-82-32-prsim-10-15-c: (srcdir only tag)
	  Confined uses of process_expr_id_map to lookup and setup functions.
		Defined PRSIM_SEPARATE_PROCESS_EXPR_MAP for later exploration
		between two implementation, small tradeoff memory/performance.
	  Next simplify some process_sim_state call sites, involving
		local/global indices.


2008-11-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-15-b: (srcdir only tag)
	  Eliminated process_first_expr_map, 
		folded into process_sim_state-base.


	* HACKT-00-01-04-main-00-82-32-prsim-10-15-a: (srcdir only tag)
	  Moved many methods of unique_process_subgraph into 
		process_sim_state, where it makes more sense, 
		thereby simplifying many function calls.  


	* HACKT-00-01-04-main-00-82-32-prsim-10-15:
	  Eliminated process_type_map, folded type reference into
		process_sim_state union member, type_ref.
		More clean-up transformations to come...


	* HACKT-00-01-04-main-00-82-32-prsim-10-14:
	  Cleaned up implementation of bool frame lookup without having
		to always check for special case pid=0 (top-level), 
		simplifying code, making less error prone.  
		Added some global_entry methods to help with this.